# IA_project

./: README.md  pyproject.toml
src/project_ia/: demo_adaptive.py  model_sklearn.py  model_tensorflow.py  program.py
