[project]
name = "project-ia"
version = "0.1.0"
description = ""
authors = [
    {name = "Charles",email = "charles.xarrie@limayrac.fr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "project_ia", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
